src/test/ui/lifetime-errors/ex3-both-anon-regions-return-type-is-anon.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-return-type-is-anon.rs:17:5
   |
16 |   fn foo<'a>(&self, x: &i32) -> &i32 {
   |                        ----     ----
   |                        |
   |                        this parameter and the return type are declared with different lifetimes...
17 |     x //~ ERROR lifetime mismatch
   |     ^ ...but data from `x` is returned here

error: aborting due to previous error

